MET-6598: Small code simplification.